--- a/style.css
+++ b/style.css
@@ -147,15 +147,15 @@ a.active {
   transition: 1s ease;
 }
 
-/* Ini bagian about us  */
+/* Ini bagian about   */
 .about-container {
   height: 700px;
   position: relative;
 }
 
-.about-container h1 {
+.about-container h3 {
   text-align: center;
-  margin-top: 15px;
+  margin-top: 60px;
 }
 
 .about-container .about-text {
@@ -185,7 +185,7 @@ a.active {
   left: 56.5%;
   bottom: 120px;
   z-index: 1;
-  background-color: #11100e;
+  background-color: #f4f3f1;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -206,7 +206,7 @@ a.active {
 
 .about-container .about-text p {
   font-size: 18px;
-  color: black;
+  color: rgb(0, 0, 0);
 }
 
 .about-container .about-text-sub h1 {
@@ -219,7 +219,7 @@ a.active {
 
 /* Ini bagian product  */
 .product-container {
-  background: black;
+  background: rgb(250, 247, 247);
   display: grid;
   flex-direction: column;
   justify-content: center;
@@ -231,7 +231,7 @@ a.active {
   margin-top: 10px;
   margin-bottom: 10px;
   text-align: center;
-  color: white;
+  color: rgb(3, 3, 3);
 }
 
 .product-container .packet-container {
@@ -239,8 +239,8 @@ a.active {
   justify-content: space-between;
 }
 
-.product-container .packet-container .packet-card {
-  border: 1px solid white;
+.product-container .partner-container  {
+  border: 1px solid rgb(10, 4, 175);
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -251,23 +251,23 @@ a.active {
   border-radius: 5px;
 }
 
-.product-container .packet-container .packet-card img {
+.product-container .partner-container .packet-card img {
   width: 206px;
   height: 229px;
   border-radius: 15px;
 }
 
-.product-container .packet-container .packet-card .image {
+.product-container .partner-container .packet-card .image {
   text-align: center;
   border: 1px solid white;
   border-radius: 15px;
 }
 
-.product-container .packet-container .packet-card:hover .packet-overlay {
+.product-container .partner-container .packet-card:hover .packet-overlay {
   opacity: 1;
 }
 
-.product-container .packet-container .packet-card .packet-overlay {
+.product-container .partner-container .packet-card .packet-overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -282,12 +282,12 @@ a.active {
   justify-content: center;
 }
 
-.product-container .packet-container .packet-card .packet-overlay p,
-.product-container .packet-container .packet-card .packet-overlay h2 {
+.product-container .partner-container .packet-card .packet-overlay p,
+.product-container .partner-container .packet-card .packet-overlay h2 {
   color: black;
 }
 
-.product-container .packet-container .packet-card h2,
+.product-container .partner-container .packet-card h2,
 p {
   color: white;
   margin-top: 10px;
@@ -313,9 +313,9 @@ p {
   position: absolute;
   text-align: center;
   line-height: 50px;
-  background: #fff;
+  background: #ccc5c5;
   border-radius: 50%;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0 3px 6px rgb(1, 1, 1);
   transform: translateY(-50%);
   transition: transform 0.1s linear;
 }
@@ -392,7 +392,7 @@ p {
 
 /* Gaya untuk kontainer gambar dalam kartu */
 .carousel .card .img {
-  background: #8b53ff;
+  background: #2202b3;
   height: 250px;
   width: 148px;
   margin-top: 20px;
@@ -431,25 +431,13 @@ p {
   display: none;
 }
 
-/* Gaya tombol */
-.cek-harga-btn {
-  background-color: black;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  margin-top: 5px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s, color 0.3s;
-}
-
 /* Efek hover */
 .cek-harga-btn:hover {
   background-color: transparent;
   border: 2px solid black;
   color: black;
 }
-
+/* /* 
 /* Ini bagian location  */
 .location-container {
   height: 600px;
@@ -514,130 +502,21 @@ p {
   border-radius: 5px;
   cursor: pointer;
   transition-duration: 0.4s;
-}
+} */
 
 .button:hover {
   background-color: white;
   color: black;
   border: 1px solid black;
-}
+} */
 
 /* Ini bagian footer  */
 .footer {
   height: 200px;
-  background-color: #0e0f10;
+  background-color: #f5f6f8;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-}
-
-.footer .logo-footer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: auto;
-  margin-top: auto;
-  margin-left: 20px;
-}
-
-.footer .logo-footer p {
-  margin-top: 10px;
-  color: white;
-}
-
-.footer .footer-menu {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer .footer-menu,
-.footer .footer-sosmed {
-  margin-top: 30px;
-}
-
-.footer .footer-menu h2,
-a {
-  color: white;
-}
-
-.footer .footer-menu a {
-  margin-top: 5px;
-}
-
-.footer .footer-sosmed {
-  margin-right: 200px;
-}
-
-.footer .footer-sosmed h2 {
-  color: white;
-}
-
-.footer .footer-sosmed .instagram,
-.footer .footer-sosmed .facebook {
-  display: flex;
-  align-items: center;
-  margin-top: 10px;
-}
-.footer .footer-sosmed .instagram a,
-.footer .footer-sosmed .facebook a {
-  display: flex;
-  align-items: center;
-  text-decoration: none; /* Menghapus garis bawah pada tautan */
-}
-
-.footer .footer-sosmed span {
-  color: white;
-  margin-left: 7px;
-  vertical-align: middle;
-  margin-bottom: 2px;
-}
-
-.footer .footer-sosmed .instagram img,
-.footer .footer-sosmed .facebook img {
-  margin-top: -px;
-  height: 30px;
-  width: 30px;
-  background-color: white;
-  border-radius: 20px;
-}
-
-/* Ini bagian floating whatsapp */
-.contact-container {
-  position: fixed;
-  bottom: 20px;
-  right: 2%;
-  display: flex;
-  align-items: center;
-  z-index: 1000;
-  transition: transform 0.3s ease-in-out;
-  background-color: #26282b;
-  padding: 5px 20px;
-  border-radius: 50px;
-}
-
-.contact-container a {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  color: white;
-}
-
-.contact-container span {
-  margin-right: 10px;
-}
-
-.whatsapp-icon {
-  width: 40px;
-  height: auto;
-  margin-top: -2px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.contact-container:hover {
-  transform: scale(1.1);
 }
 
 /* Resposivitas */
